fix navigation overflowing on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -86,8 +86,8 @@
   position: fixed;
   z-index: 20;
   left: 0;
-  top: -100%;
-  width: 100%;
+  top: -200%;
+  width: 100vw;
   height: 100vh;
   box-shadow: -5px 0 15px rgb(0 0 0 / 10%);
   transition: top 0.3s ease;
